# af

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN_SYSTEM.md  building-os-demo-v3.html
backend/: .gitignore  main.py  main.py.legacy  main2.py  pyproject.toml  requirements.txt
backend/api/v1/: router.py
backend/api/v1/benchmark/: router.py  schemas.py  service.py
backend/api/v1/bms/: router.py  schemas.py
backend/api/v1/boptest/: models.py  router.py  schemas.py  service.py
backend/api/v1/building/: router.py  schemas.py  service.py
backend/api/v1/simulator/: docker-compose.yml
backend/api/v1/simulator/testcases/singlezone_commercial_hydronic/models/: RealOccupancy.csv
backend/api/v1/websocket/: manager.py  router.py
backend/core/: config.py  sim_client.py
backend/db/: engine.py  timescale.py
backend/experiments/sankey_hvac/: boptest_client.py  energy_flows.py  requirements.txt  sankey_builder.py  sankey_dash.py  sankey_static.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/testsprite_tests/: TC002_Live_status_reflects_connecting_to_connected_lifecycle.py  TC003_Sidebar_tab_switching_preserves_mounted_view_state.py  TC004_Auto_reconnect_restores_live_connected_state_after_an_unexpected_disconnect.py  TC005_Digital_Twin_renders_live_snapshot_and_updates_visualizations_over_time.py  TC007_Shows_disconnected_status_when_live_connection_is_unavailable_and_last_known_data_remains_usable.py  standard_prd.json  (+11 more)
sim-stack/: .env.sim  .gitignore  docker-compose.override.yml
(+118 files in other folders)
